# tridesic

./: CMakeLists.txt  README.md  setup.py
lib/cpp_code/: my_heap.cpp  unfold.cpp  y_stand.h
src/: main.cpp
test/: 001.off  012.off  compute_geodesic.py
